--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
         dotnet-version: 7.0.x
     - name: build_release
       run: |
-        cd FiatAddon/FiatClient
+        cd FiatChampAddon/FiatClient
         dotnet publish -r ${{ matrix.rid }} --configuration Release --self-contained -o build/
     - name: docker_login
       uses: docker/login-action@v2.0.0
