--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,4 +40,4 @@ jobs:
       with:
         args: |
           --${{ matrix.arch }} \
-          --target FiatAddon
+          --target FiatChampAddon
