--- a/FiatAddon/config.yaml
+++ b/FiatAddon/config.yaml
@@ -5,7 +5,7 @@ services:
     - "mqtt:want"
 version: "1"
 homeassistant_api: true
-image: "ghcr.io/Bart738/image-{arch}-fiat-champ"
+image: "ghcr.io/bart738/image-{arch}-fiat-champ"
 slug: "fiat_champ"
 init: false
 discovery: 
