--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: FiatChamp
-url: https://github.com/bart738/FiatChamp
-maintainer: Bart738
+url: https://github.com/devflorian/FiatChamp
+maintainer: DevFlorian
